Added get fragment svg to webservice
